--- a/html1intropracticalexamples.html
+++ b/html1intropracticalexamples.html
@@ -4,54 +4,7 @@
         <title>HTML INTRODUCTION PRACTICAL EXAMPLES</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/style.css" rel="stylesheet">
-        <style>
-            body{
-                background-color: #faf2fd;
-                color: #4c2358;
-                margin:30px;
-                font-family: helvetica;
-            }
-            .head{
-                text-align: center;
-                background-color: rgb(97, 6, 97);
-                color: rgb(239, 225, 242);
-                border-radius:40px;
-            }
-            div{
-                background-color:rgb(235, 208, 241) ;
-                margin:10px;
-                padding: 10px;
-                border-radius: 20px;
-            }
-              button{
-               
-                padding:8px ;
-                font-size: 15px;
-                margin: 1px;
-                cursor: pointer;
-                background-color:#4c2358;
-                color:white;
-                border: none;
-                border-radius: 5px;
-            }
-            a{
-                text-decoration: none;
-                color: white;
-            }
-            .first, .second, .third, .fourth,.fifth{
-                display: inline-flex;
-                margin: 20px;
-                background-color: #ffffff;
-            }
-            img{
-                width:900px;
-                height: 400px;
-            }
-            pre{
-                padding: 40px;
-            }
-        </style>
+        <link href="practicalexamples.css" rel="stylesheet">
     </head>
     <body>
         <h1 class="head">Examples</h1>
