--- a/html1intropracticalquestions.html
+++ b/html1intropracticalquestions.html
@@ -4,7 +4,7 @@
         <title>HTML INTRODUCTION PRACTICAL EXERCISE</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="html1intropracticalquestions.css" rel="stylesheet">
+        <link href="practicalquestions.css" rel="stylesheet">
      </head>
     <body>
     <h1>HTML INTRODUCTION PRACTICAL EXERCISE</h1>
