--- a/html1introprojectpracticequestion.html
+++ b/html1introprojectpracticequestion.html
@@ -4,43 +4,7 @@
         <title> HTML INTRODUCTION PROJECT PRACTICE QUESTIONS</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/style.css" rel="stylesheet">
-        <style>
-             body{
-                 background-color: #faf2fd;
-                color: #4c2358;
-                margin:30px;
-                font-family: helvetica;
-                
-            }
-            h1{
-                text-align: center;
-                background-color: rgb(97, 6, 97);
-                color: rgb(239, 225, 242);
-                border-radius:40px;
-            }
-            div{
-                background-color:rgb(255, 255, 255) ;
-                margin:10px;
-                padding: 10px;
-                border-radius: 20px;
-            }
-            button{
-               
-                padding:8px ;
-                font-size: 15px;
-                margin: 1px;
-                cursor: pointer;
-                background-color:#4c2358;
-                color:white;
-                border: none;
-                border-radius: 5px;
-            }
-            a{
-                color: white;
-                text-decoration: none;
-            }
-        </style>
+        <link href="projectpracticequestions.css" rel="stylesheet">
     </head>
     <body>
     <h1>PRACTICE QUESTIONS</h1>
