--- a/html3textformattingmcq.html
+++ b/html3textformattingmcq.html
@@ -4,7 +4,7 @@
         <title>HTML TEXT FORMATTING EXERCISE</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="html1introductionmcq.css" rel="stylesheet">
+        <link href="mcqs.css" rel="stylesheet">
     </head>
     <body>
     <h1>HTML TEXT FORMATTING EXERCISE</h1>
