--- a/subjects.html
+++ b/subjects.html
@@ -12,7 +12,7 @@
     <h1>SUBJECTS</h1>
   </header>
     <div class="main">
-<a href="cfn.html" ><div class="div2"> Computer Fundamentals and Networks</div></a>
+<a href="cfn1.html" ><div class="div2"> Computer Fundamentals and Networks</div></a>
 <a href="os.html"><div class="div2">Operating Systems</div></a>
 <a href="dsa.html"><div class="div2">DSA</div></a>
 <a href="ssad.html"><div class="div2">SSAD</div></a>
@@ -24,6 +24,7 @@
 <a href="uml.html"><div class="div2">Unified Modeling Language</div></a>
 <a href="linux.html"><div class="div2">Linux</div></a>
 <a href="dm.html"><div class="div2">Data Mining</div></a>
+<a href="ecom.html"><div class="div2">E-Commerce</div></a>
 <a href="ct.html"><div class="div2">Cloud Technology</div></a>
     </div>
     </body>
