--- a/html1introprojectexamplesforpractice.html
+++ b/html1introprojectexamplesforpractice.html
@@ -4,41 +4,8 @@
     <title>HTML PROJECT EXAMPLE FOR PRACTICE</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="projectexamplesforpractical.css" rel="stylesheet">
     <style>
-            body{
-                background-color: #faf2fd;
-                color: #4c2358;
-                margin:30px;
-                font-family: helvetica;
-            }
-            h1{
-                text-align: center;
-                background-color: rgb(97, 6, 97);
-                color: rgb(239, 225, 242);
-                border-radius:40px;
-            }
-            div{
-                background-color: #ffffff;
-                margin:10px;
-                padding: 10px;
-                border-radius: 20px;
-            }
-            button{
-               
-                padding:8px;
-                font-size: 15px;
-                margin: 1px;
-                cursor: pointer;
-                background-color:#4c2358;
-                color:white;
-                border: none;
-                border-radius: 5px;
-            }
-            a{
-                color: white;
-                text-decoration:none;
-            }
     </style>
     </head>
     <body>
